[package]
name = "jito-backrun-example"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
futures-util = "0.3.31"
histogram = "0.11.1"
jito-protos = { path = "../jito_protos" }
log = "0.4.22"
rand = "0.8.5"
jito-searcher-client = { path = "../searcher_client" }
solana-client = "=2.1.7"
solana-metrics = "=2.1.7"
solana-sdk = "=2.1.7"
solana-transaction-status = "=2.1.7"
spl-memo = "6.0.0"
thiserror = "2.0.9"
tokio = "1"
tonic = { version = "0.12", features = ["tls", "tls-roots", "tls-webpki-roots"] }
uuid = { version = "1.11.0", features = ["v4"] }
