[package]
name = "jito-searcher-client"
version = "0.1.0"
edition = "2021"
description = "Wrapper around the generated gRPC. Adds auth and retry semantics."

[dependencies]
futures-util = "0.3.31"
jito-protos = { path = "../jito_protos" }
log = "0.4"
prost-types = "0.13"
solana-client = "=2.1.7"
solana-metrics = "=2.1.7"
solana-sdk = "=2.1.7"
solana-transaction-status = "=2.1.7"
thiserror = "2.0.9"
tokio = "1"
tonic = { version = "0.12", features = [ "tls", "tls-roots", "tls-webpki-roots"] }
